--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,10 +7,25 @@ variables:
 
 
 stages:
+  - review
   - lint
   - test
   - build
   - deploy
+
+review:
+  stage: review
+  script:
+    - mkdir -p /static/$CI_BUILD_REF_SLUG
+    - echo "Hello world" > /static/$CI_BUILD_REF_SLUG/index.html
+  environment:
+    name: review/$CI_BUILD_REF_NAME
+    url: http://$CI_BUILD_REF_SLUG.$REVIEW_DOMAIN
+  only:
+    - branches@funkwhale/funkwhale
+  tags:
+    - funkwhale-review
+
 
 black:
   image: python:3.6
