Ensure PROXY_MEDIA is always true when running tests

--- a/api/setup.cfg
+++ b/api/setup.cfg
@@ -25,3 +25,4 @@ env =
     CREATE_IMAGE_THUMBNAILS=False
     FORCE_HTTPS_URLS=False
     FUNKWHALE_SPA_HTML_ROOT=http://noop/
+    PROXY_MEDIA=true
