--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,29 +1,29 @@
-FROM alpine:3.10
+FROM alpine:3.10 as builder
 
 RUN \
     echo 'installing dependencies' && \
-    apk add --no-cache --virtual build-deps               \
+    apk add --no-cache               \
     git             \
     musl-dev           \
     gcc \
-    make         \
-    && apk add --no-cache \
-    bash             \
-    gettext            \
     postgresql-dev \
     python3-dev        \
     py3-psycopg2       \
     py3-pillow         \
     libldap            \
-    ffmpeg             \
-    libpq              \
-    libmagic           \
     libffi-dev         \
+    make         \
     zlib-dev           \
+    jpeg-dev           \
     openldap-dev \
     && \
     \
     ln -s /usr/bin/python3 /usr/bin/python
+
+# create virtual env for next stage
+RUN python -m venv /venv
+# emulate activation by prefixing PATH
+ENV PATH="/venv/bin:$PATH" VIRTUAL_ENV=/venv
 
 RUN mkdir /requirements
 COPY ./requirements/base.txt /requirements/base.txt
@@ -44,8 +44,25 @@ COPY ./requirements/*.txt /requirements/
 RUN \
     if [ "$install_dev_deps" = "1" ] ; then echo "Installing dev dependencies" && pip3 install --no-cache-dir -r /requirements/local.txt -r /requirements/test.txt ; else echo "Skipping dev deps installation" ; fi
 
-RUN \
-    apk del build-deps
+
+FROM alpine:3.10 as build-image
+
+COPY --from=builder /venv /venv
+# emulate activation by prefixing PATH
+ENV PATH="/venv/bin:$PATH"
+
+RUN apk add --no-cache \
+    libmagic \
+    bash             \
+    gettext            \
+    python3        \
+    jpeg-dev \
+    ffmpeg             \
+    libpq              \
+    && \
+    \
+    ln -s /usr/bin/python3 /usr/bin/python
+
 
 ENTRYPOINT ["./compose/django/entrypoint.sh"]
 CMD ["./compose/django/server.sh"]
