Another try to make the required branches loavailable on the runner

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -78,7 +78,9 @@ review_docs:
     - apt-get install -y graphviz git
     - pip install poetry
     - poetry install
-    - git fetch origin develop && git fetch origin stable
+    - git switch develop
+    - git switch stable
+    - git switch $CI_COMMIT_BRANCH
   script:
     - ./build_docs.sh
   cache:
