--- a/dev.yml
+++ b/dev.yml
@@ -79,6 +79,11 @@ services:
       - internal
     cap_add:
       - SYS_PTRACE
+    extra_hosts:
+      - "node1.funkwhale.test:172.17.0.1"
+      - "node2.funkwhale.test:172.17.0.1"
+      - "node3.funkwhale.test:172.17.0.1"
+
 
   celeryworker:
     env_file:
