feat: Add basic cypress testing
Part-of: <https://dev.funkwhale.audio/funkwhale/funkwhale/-/merge_requests/1795>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -313,6 +313,17 @@ build_metadata:
       - docker-bake.api.json
       - docker-bake.front.json
 
+
+test_integration:
+  interruptible: true
+  stage: test
+  image: cypress/base:16.14.2
+  before_script:
+    - cd front
+    - yarn install
+  script:
+    - yarn run cypress run
+
 build_api_schema:
   stage: build
   needs:
