--- a/front/package.json
+++ b/front/package.json
@@ -78,6 +78,7 @@
     "@vue/test-utils": "2.2.7",
     "@vue/tsconfig": "0.1.3",
     "axios-mock-adapter": "1.21.4",
+    "cypress": "12.13.0",
     "eslint": "8.30.0",
     "eslint-config-standard": "17.0.0",
     "eslint-plugin-html": "7.1.0",
@@ -88,6 +89,7 @@
     "eslint-plugin-vue": "9.8.0",
     "jsdom": "20.0.3",
     "jsonc-eslint-parser": "2.1.0",
+    "p-limit": "4.0.0",
     "rollup-plugin-visualizer": "5.9.0",
     "sass": "1.57.1",
     "sinon": "15.0.2",
