--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -14,6 +14,7 @@ tasks:
       echo "STATIC_URL=http://localhost:8000/staticfiles/" >> .env
       echo "GITPOD_WORKSPACE_URL=$GITPOD_WORKSPACE_URL" >> .env
       echo "HMR_PORT=8000" >> .env
+      echo "VUE_APP_INSTANCE_URL=$VUE_APP_INSTANCE_URL" >> .env
 
       # Prepare docker
       docker network create federation
