--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -32,8 +32,10 @@ tasks:
       docker-compose run --rm front yarn run i18n-compile
 
       # Login with cURL to create actors
+      docker-compose down
       docker-compose up -d nginx
       gp ports await 8000
+      sleep 10 # allow django to start
       python .gitpod/init_actor.py
 
       # Import music
