Try to fix covers

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -12,6 +12,8 @@ tasks:
       echo "# Gitpod Environment Variables" > .env
       echo "MEDIA_URL=http://localhost:8000/media/" >> .env
       echo "STATIC_URL=http://localhost:8000/staticfiles/" >> .env
+      echo "FUNKWHALE_HOSTNAME=`gp url 8000 | sed 's#https://##'`" >> .env
+      echo "FUNKWHALE_PROTOCOL=https" >> .env
       echo "GITPOD_WORKSPACE_URL=$GITPOD_WORKSPACE_URL" >> .env
       echo "HMR_PORT=8000" >> .env
       echo "VUE_APP_INSTANCE_URL=$VUE_APP_INSTANCE_URL" >> .env
