--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -12,8 +12,6 @@ tasks:
       echo "# Gitpod Environment Variables" > .env
       echo "MEDIA_URL=http://localhost:8000/media/" >> .env
       echo "STATIC_URL=http://localhost:8000/staticfiles/" >> .env
-      echo "FUNKWHALE_HOSTNAME=`gp url 8000 | sed 's#https://##'`" >> .env
-      echo "FUNKWHALE_PROTOCOL=https" >> .env
       echo "GITPOD_WORKSPACE_URL=$GITPOD_WORKSPACE_URL" >> .env
       echo "HMR_PORT=8000" >> .env
       echo "VUE_APP_INSTANCE_URL=$VUE_APP_INSTANCE_URL" >> .env
@@ -33,18 +31,27 @@ tasks:
       # Compile frontend locales
       docker-compose run --rm front yarn run i18n-compile
 
-      # Login with cURL to create actors
+      # Start API to let script create an actor
       docker-compose up -d nginx
       gp ports await 8000
 
-      # Import music
+      # Clone music repo
       git clone https://dev.funkwhale.audio/funkwhale/catalog.git
       sudo mv catalog/music data
       sudo chown -R root:root data/music
       rm -rf catalog
+
+      # Login with cURL to create actor
       python .gitpod/init_actor.py
+
+      # Import music
+      docker-compose down
+      echo "FUNKWHALE_HOSTNAME=`gp url 8000 | sed 's#https://##'`" >> .env
+      echo "FUNKWHALE_PROTOCOL=https" >> .env
       LIBRARY_ID=`cat .gitpod/create_library.py | docker-compose run --rm -T api python manage.py shell -i python`
       docker-compose run --rm api python manage.py import_files $LIBRARY_ID "/music/" --recursive --noinput --in-place
+
+      # Stop docker
       docker-compose stop
     command: |
       docker-compose up -d nginx
