Fix MEDIA_URL and STATIC_URL

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -10,8 +10,8 @@ tasks:
 
       # Prepare .env
       echo "# Gitpod Environment Variables" > .env
-      echo "MEDIA_URL=http://localhost:8000/media/" >> .env
-      echo "STATIC_URL=http://localhost:8000/staticfiles/" >> .env
+      echo "MEDIA_URL=`gp url 8000`/media/" >> .env
+      echo "STATIC_URL=`gp url 8000`/staticfiles/" >> .env
       echo "FUNKWHALE_HOSTNAME=`gp url 8000 | sed 's#https://##'`" >> .env
       echo "GITPOD_WORKSPACE_URL=$GITPOD_WORKSPACE_URL" >> .env
       echo "HMR_PORT=8000" >> .env
