Prepare .env when a new workspace is created

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -8,14 +8,8 @@ tasks:
       yarn install
       cd ..
 
-      # Prepare .env
+      # Prepare prebuild .env
       echo "# Gitpod Environment Variables" > .env
-      echo "MEDIA_URL=`gp url 8000`/media/" >> .env
-      echo "STATIC_URL=`gp url 8000`/staticfiles/" >> .env
-      echo "FUNKWHALE_HOSTNAME=`gp url 8000 | sed 's#https://##'`" >> .env
-      echo "GITPOD_WORKSPACE_URL=$GITPOD_WORKSPACE_URL" >> .env
-      echo "HMR_PORT=8000" >> .env
-      echo "VUE_APP_INSTANCE_URL=$VUE_APP_INSTANCE_URL" >> .env
 
       # Prepare docker
       docker network create federation
@@ -54,8 +48,16 @@ tasks:
       # Stop docker
       docker-compose stop
     command: |
-      docker-compose up -d nginx
-      docker-compose up front api
+      # Prepare workspace .env
+      echo "MEDIA_URL=`gp url 8000`/media/" >> .env
+      echo "STATIC_URL=`gp url 8000`/staticfiles/" >> .env
+      echo "FUNKWHALE_HOSTNAME=`gp url 8000 | sed 's#https://##'`" >> .env
+      echo "GITPOD_WORKSPACE_URL=$GITPOD_WORKSPACE_URL" >> .env
+      echo "HMR_PORT=8000" >> .env
+      echo "VUE_APP_INSTANCE_URL=$VUE_APP_INSTANCE_URL" >> .env
+
+      # Start app
+      docker-compose up front api nginx
 
   - name: Welcome to Funkwhale development!
     env:
