--- a/front/package.json
+++ b/front/package.json
@@ -38,6 +38,7 @@
     "qs": "6.11.0",
     "sass": "1.54.9",
     "showdown": "2.1.0",
+    "standardized-audio-context": "^25.3.32",
     "text-clipper": "2.2.0",
     "transliteration": "2.3.5",
     "universal-cookie": "4.0.4",
