--- a/docs/pyproject.toml
+++ b/docs/pyproject.toml
@@ -15,6 +15,7 @@ Django = "==4.0.5"
 sphinx-multiversion = "0.2.4"
 sphinx-intl = "2.0.1"
 sphinx_design = "0.2.0"
+sphinxcontrib-mermaid = "^0.7.1"
 
 [tool.poetry.dev-dependencies]
 
