Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,7 +57,7 @@ build_dep_wheels:
       libxslt-dev
       curl
       poetry
-      pip
+      py3-pip
     - poetry export --without-hashes > requirements.txt
     - python -m venv venv
     - source venv/bin/activate
