--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -63,7 +63,7 @@ build_dep_wheels:
     - cd ..
     - python -m venv venv
     - source venv/bin/activate
-    - pip install --upgrade pip
+    - pip install --upgrade pip wheel
   script:
     - source venv/bin/activate
     - pip wheel --check-build-dependencies -w wheelhome -r requirements.txt
