--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,24 +27,14 @@ stages:
   - test
   - build
   - publish
-
-test:
-  stage: deploy
-  image: alpine
-  variables:
-    TEST: $IMAGE_NAME
-    IMAGE_NAME: topkek
-  script:
-    - echo $TEST
-    - echo $IMAGE_NAME
     
 build_dep_wheels:
   stage: build
   parallel:
     matrix:
-      - DOCKER_PLATFORM: [amd64, i386, arm64v8, arm32v7, riscv64]
+      - DOCKER_PLATFORM: [amd64, i386, arm64v8, arm32v7] #, riscv64]
   tags: [docker, $DOCKER_PLATFORM]
-  image: ${DOCKER_PLATFORM}/alpine:edge #3.17
+  image: ${DOCKER_PLATFORM}/alpine:3.17 #edge #3.17
   before_script:
     - >
       apk add
