--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -246,9 +246,9 @@ test_api:
 #    - if: $CI_COMMIT_REF_PROTECTED == "true"
 #      when: always
 
-build_docs:
+build_openapi_schema:
   stage: build
-  image: $CI_REGISTRY/funkwhale/backend-test-docker:3.10
+  image: $CI_REGISTRY/funkwhale/backend-test-docker:3.11
   services:
     - postgres:15-alpine
     - redis:7-alpine
