--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,9 +44,9 @@ build_dep_wheels:
   stage: build
   parallel:
     matrix:
-      - DOCKER_PLATFORM: [amd64, i386, arm64v8, arm32v7, riscv64]
+      - DOCKER_PLATFORM: [amd64, i386, arm64v8, arm32v7]#, riscv64]
   tags: [docker, $DOCKER_PLATFORM]
-  image: ${DOCKER_PLATFORM}/alpine:edge
+  image: ${DOCKER_PLATFORM}/alpine:3.17
   before_script:
     - >
       apk add
